[package]
name = "mosaic-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["proj", "object_store"]
# Enable PROJ-powered transforms (recommended).
proj = ["dep:proj", "warp-rs/proj"]
# Enable object_store-backed I/O in async-tiff.
object_store = ["async-tiff/object_store"]
# Optional Perfetto/Chrome trace export via tracing.
perfetto = ["dep:tracing-chrome"]

[dependencies]
warp-rs = { git = "https://github.com/ljstrnadiii/warp-rs.git", branch = "main", default-features = false }
async-tiff = { path = "../async-tiff", default-features = false }
proj = { version = "0.31", optional = true }
geo = "0.28"
rstar = "0.11"
rayon = "1.11"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync"] }
thiserror = "2.0"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
object_store = { version = "0.13", features = ["aws"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], default-features = false }
tracing-chrome = { version = "0.7", optional = true }
url = "2.5"
lru = "0.12"
