[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "mosaic-rs"
requires-python = ">=3.10"
description = "Python bindings for the mosaic-rs Rust crate"
readme = "README.md"
dependencies = ["obstore>=0.8.2"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "geopandas>=1.0",
    "numpy>=2.0",
    "pyarrow>=16.0",
    "rasterio>=1.4",
]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "mosaic_rs._mosaic_rs"
python-source = "python"
